--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "format": "prettier --write --experimental-cli src/"
   },
   "dependencies": {
+    "firebase": "^12.7.0",
     "vue": "^3.5.26"
   },
   "devDependencies": {
