--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "firebase": "^12.7.0",
     "material-icons": "^1.13.14",
     "vue": "^3.5.26",
+    "vue-router": "^4.6.4",
     "vuetify": "^4.0.0-alpha.0"
   },
   "devDependencies": {
